--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,150 @@
+* {
+  margin: 0%;
+  box-sizing: inherit;
+}
+
 .App {
+  font-family: sans-serif;
+  background-color: rgb(63, 52, 78);
+}
+
+.navbar {
+  display: flex;
+  padding: 15px;
+  background-image: linear-gradient(to right, rgb(50, 68, 95), rgb(34, 34, 30));
+}
+
+.navbar .head {
+  font-family: "Dongle", sans-serif;
+  font-weight: 900;
+  font-size: xx-large;
+  color: white;
+  margin-left: 5px;
+}
+
+.newPost-btn {
+  border-radius: 6px;
+  background-color: rgb(62, 233, 167);
+  font-weight: bold;
+  font-size: medium;
+  margin: 0px 10px;
+  cursor: pointer;
+}
+
+.searchbar {
+  flex: 1%;
+  border-radius: 6px;
+  margin: 0px 20rem;
+  font-size: medium;
+}
+
+.signIn-btn {
+  border-radius: 6px;
+  background-color: rgb(62, 233, 167);
+  font-weight: bold;
+  font-size: medium;
+  margin-right: 20px;
+  padding: 0px 10px;
+  cursor: pointer;
+}
+
+.signUp-btn {
+  border-radius: 6px;
+  background-color: transparent;
+  color: white;
+  font-weight: bold;
+  font-size: medium;
+  margin: 0px 10px;
+  cursor: pointer;
+}
+
+.img-gallery {
+  -webkit-column-count: 5;
+  -moz-column-count: 5;
+  column-count: 5;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width: 33%;
+  margin: 3rem 8rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.img-card {
+  border: 1px solid black;
+  border-radius: 6px;
+  margin-bottom: 12px;
+  width: 16vw;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #979494;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  padding: 0px;
+  margin: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* .card-body {
+  width: 100%;
+} */
+
+.img {
+  width: 100%;
+  height: 90%;
+}
+
+.counter-btn {
+  padding: 0.2rem;
+  display: flex;
+  display: inline-flex;
+  cursor: pointer;
+  font-size: large;
+}
+
+.count-div {
+  padding: 0.4rem;
+  user-select: none;
+}
+
+.counter-btn:hover {
+  opacity: 0.8;
+}
+
+.popup-box {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+
+.box {
+  position: relative;
+  width: 70%;
+  margin: 0 auto;
+  height: auto;
+  max-height: 70vh;
+  margin-top: calc(100vh - 85vh - 20px);
+  background: #fff;
+  border-radius: 4px;
+  padding: 20px;
+  border: 1px solid #999;
+  overflow: auto;
+}
+
+.close-icon {
+  content: "x";
+  cursor: pointer;
+  position: fixed;
+  right: calc(15% - 30px);
+  top: calc(100vh - 85vh - 33px);
+  background: #ededed;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  line-height: 20px;
+  text-align: center;
+  border: 1px solid #999;
+  font-size: 20px;
 }
