--- a/src/App.css
+++ b/src/App.css
@@ -288,14 +288,14 @@ h2 {
   display: flex;
   flex-direction: right;
   background-color: rgb(51, 58, 78);
-  border: 2px solid white;
+  border: 2px solid black;
   padding: 10px;
 }
 
 .footer-flexItems {
   flex: 7%;
   
-  border: 2px solid white;
+  border: 2px solid black;
   justify-content: center;
   align-items: center;
   text-align: center;
